# Colab-laife

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  justfile
backend/: Cargo.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: annotations.rs  auth.rs  collaborators.rs  disc_results.rs  expectation_items.rs  extract.rs  feedback.rs  feedback_behaviors.rs  health.rs  lib.rs  main.rs  organizations.rs  roles.rs  sectors.rs  users.rs
backend/crates/api/tests/: annotations.rs  auth.rs  collaborators.rs  disc_results.rs  expectation_items.rs  feedback.rs  feedback_behaviors.rs  health.rs  me.rs  organizations.rs  roles.rs  sectors.rs  spa.rs  users.rs
backend/crates/api/tests/fixtures/spa/: app.js  index.html
backend/crates/entity/: Cargo.toml
backend/crates/entity/src/: annotation.rs  collaborator.rs  collaborator_disc_result.rs  expectation_contract_item.rs  feedback.rs  feedback_behavior.rs  lib.rs  organization.rs  role.rs  sector.rs  user.rs
backend/crates/entity/src/permission/: mod.rs  profile.rs  profile_task.rs  profile_user.rs  resource.rs  task.rs  task_resource.rs
backend/crates/migration/: Cargo.toml
backend/crates/migration/src/: lib.rs  main.rs
backend/crates/migration/src/public/: m20260601_000001_create_organizations.rs  m20260601_000002_create_users.rs  mod.rs
backend/crates/migration/src/tenant/: m20260601_000003_create_permissions.rs  m20260601_000004_create_sector.rs  m20260601_000005_create_role.rs  m20260601_000006_create_collaborator.rs  m20260601_000007_create_feedback.rs  m20260601_000008_create_expectation_contract_item.rs  m20260601_000009_create_feedback_behavior.rs  m20260601_000010_create_annotation.rs  m20260601_000011_create_collaborator_disc_result.rs  mod.rs
backend/crates/migration/tests/: public.rs  tenant.rs
backend/crates/service/: Cargo.toml
backend/crates/service/src/: auth.rs  disc.rs  lib.rs  password.rs  permission.rs  provisioning.rs  tenant.rs
backend/crates/service/tests/: auth.rs  permission.rs  provisioning.rs  tenant.rs
docs/: README.md  architecture.md
docs/adr/: 0001-record-architecture-decisions.md  0002-backend-rust-axum.md  0003-persistence-seaorm-postgres.md  0004-multi-tenant-schema-per-tenant.md  0005-frontend-elm.md  0006-password-hashing-argon2.md  0007-tenant-provisioning.md  0008-stateless-jwt-sessions.md  0009-per-request-tenant-resolution.md  0010-granular-rbac.md  0011-serve-spa-from-axum.md  0012-public-disc-submission.md  README.md
docs/domain/: README.md  climate-survey.md  dashboard.md  disc-assessment.md  employees.md  notes-feedback.md  recruitment.md  tasks.md  whistleblower.md
e2e/: package-lock.json  package.json  playwright.config.ts
e2e/scripts/: e2e-stack.mjs
e2e/tests/: annotations-write.spec.ts  collaborators-write.spec.ts  feedback-write.spec.ts  login.spec.ts  roles-write.spec.ts  sectors-write.spec.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: Api.elm  Main.elm
frontend/src/Page/: Annotations.elm  Collaborators.elm  Directory.elm  Feedback.elm  Login.elm  Roles.elm  Sectors.elm
frontend/tests/: ApiTest.elm
