[workspace]
resolver = "2"
members = ["crates/api", "crates/entity", "crates/migration", "crates/service"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95.0"

# Centralized, pinned dependency versions. Each crate opts in with
# `dep.workspace = true`. The committed Cargo.lock is the source of truth for the
# exact (transitive) versions; these entries pin the direct ones.
[workspace.dependencies]
# Web / async
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

# Persistence (SeaORM 1.x stable — not the 2.0 release candidate)
sea-orm = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-postgres", "macros"] }
sea-orm-migration = { version = "1.1.20", features = ["runtime-tokio-rustls", "sqlx-postgres"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Test tooling
axum-test = "20.1.0"
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
rstest = "0.26.1"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
