[package]
name = "api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
entity = { path = "../entity" }
service = { path = "../service" }

[dev-dependencies]
# `mock` lets unit tests build a DatabaseConnection without a real database.
sea-orm = { workspace = true, features = ["mock"] }
migration = { path = "../migration" }
axum-test.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
