[package]
name = "migration"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
name = "migration"
path = "src/lib.rs"

[[bin]]
name = "migration"
path = "src/main.rs"

[dependencies]
sea-orm-migration.workspace = true
tokio.workspace = true

[dev-dependencies]
# Integration tests apply the migrations against a throwaway PostgreSQL and
# round-trip through the entities.
entity = { path = "../entity" }
sea-orm.workspace = true
uuid.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
pretty_assertions.workspace = true
