[package]
name = "service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entity = { path = "../entity" }
sea-orm.workspace = true
argon2.workspace = true

[dev-dependencies]
mockall.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
