[package]
name = "service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }
sea-orm.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
serde.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
testcontainers.workspace = true
testcontainers-modules.workspace = true
mockall.workspace = true
rstest.workspace = true
pretty_assertions.workspace = true
